--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -766,21 +766,22 @@
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="stateAlwaysHidden|adjustPan"/>
         <activity
-            android:name=".activity.MsgShowAlbumActvity"
-            android:label="@string/title_activity_msg_show_album"
+            android:name=".activity.AgoraCallOutActivity"
+            android:label="@string/title_activity_call_out"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"/>
+            android:theme="@style/AppTheme">
+        </activity>
         <activity
-            android:name=".activity.MsgAlbumFullScreenActivity"
-            android:label="@string/title_activity_msg_album_full_screen"
+            android:name=".activity.AgoraCallInActivity"
+            android:label="@string/title_activity_agora_call_in"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"/>
+            android:theme="@style/AppTheme">
+        </activity>
         <activity
-            android:name=".activity.ServerDownActivity"
-            android:label="@string/title_activity_server_down"
+            android:name=".activity.AgoraWildCallActivity"
+            android:label="@string/title_activity_agora_wild_call"
             android:screenOrientation="portrait"
-            android:noHistory="true"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:theme="@style/call_theme">
         </activity>
     </application>
 
